@@ -22,3 +22,13 @@ pathRes: "https://ed7n.github.io/res"
 splitSubtitle: ": "
 splitTitle: " - "
 eon: "https://ed7n.github.io"
+menu:
+  - label: "Home"
+    class: "out"
+    href: "https://ed7n.github.io/net/viewer"
+  - label: "Privacy"
+    class: "out"
+    href: "https://ed7n.github.io/pages/privacy"
+  - label: "Contact"
+    class: "out"
+    href: "https://ed7n.github.io/pages/contact"
