@@ -1,12 +1,12 @@
 path: "pwa"
-version: "Revision 2"
-date: 2023-03-08
+version: "Revision 3"
+date: 2023-03-30
 noCurtain: false
 noFooter: false
 noHeader: false
 noNavPage: false
 noNavSite: false
-pwaSizeMin: "260 kB"
+pwaSizeMin: "270 kB"
 head:
   title: "NET-Installer"
   manifest: "pwa.webmanifest"
