@@ -3,7 +3,7 @@
   {%-assign pageHasStyleHeaderFooter = true%}
 {%endunless-%}
 <footer>
-<section>
+<section class="invert">
   <section class="banner" role="banner">
     {%include banner.html%}
   </section>
