@@ -1,19 +1,19 @@
 {%-include variables.html-%}
 <!DOCTYPE html>
-{%include head.html%}
+{%include page/head.html%}
     <link rel="stylesheet" href="{{sitePathRes}}/styles/document.css" />
   </head>
   <body>
 {%-unless noCurtain%}
-{%include curtain.html-%}
+{%include page/curtain.html-%}
 {%-endunless-%}
 {%-unless noBackground%}
-{%include background.html-%}
+{%include page/background.html-%}
 {%-endunless%}
     <main>
       <article>
 {%-unless noHeader%}
-{%include header.html-%}
+{%include page/header.html-%}
 {%-endunless-%}
 {%-unless noNavPage%}
 {%include nav-page.html-%}
@@ -22,7 +22,7 @@
 }}      </article>
     </main>
 {%-unless noFooter%}
-{%include footer.html-%}
+{%include page/footer.html-%}
 {%-endunless-%}
 {%-unless noNavPage%}
 {%include nav-tree.html-%}
