@@ -1,4 +1,5 @@
 <form>
+<p><i>These may not apply outside our display context.</i></p>
 <details open>
 <summary><h3>Position</h3></summary>
 {%include_relative _sections/sections/position.html-%}
